# leo_examples-ros2

./: LICENSE  README.md
.github/workflows/: ci.yml
leo_example_follow_aruco_marker/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_example_follow_aruco_marker/config/: follower.yaml  tracker.yaml
leo_example_follow_aruco_marker/launch/: follow_aruco_marker.launch.xml
leo_example_follow_aruco_marker/leo_follow_aruco/: aruco_follower_node.py  follower_parameters.yaml  utils.py
leo_example_follow_aruco_marker/scripts/: aruco_follower
leo_example_line_follower/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_example_line_follower/config/: blue.yaml  red.yaml
leo_example_line_follower/launch/: color_mask.launch.xml  line_follower.launch.xml  record_data.launch.xml
leo_example_line_follower/leo_line_follower/: color_mask_node.py  data_saver_node.py  follower_parameters.yaml  line_follower_node.py  utils.py
leo_example_line_follower/notebooks/: leorover-line-follower.ipynb
leo_example_line_follower/scripts/: color_mask  data_saver  line_follower  prepare_data
leo_example_object_detection/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_example_object_detection/config/: labels_config.yaml  object_detector.yaml
leo_example_object_detection/launch/: detector.launch.xml
leo_example_object_detection/leo_object_detection/: object_detector_node.py
leo_example_object_detection/scripts/: object_detector
leo_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
